--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 html,
@@ -10,3 +10,46 @@ body {
 }
 
 /* Add styles here! */
+.max-width-wrapper {
+  max-width: 100vw;
+  padding: 50px 200px;
+}
+
+.intro-chunk {
+  max-width: 330px;
+}
+
+.intro-chunk > * {
+  margin-bottom: 2rem;
+}
+
+.title {
+  margin-bottom: 3rem;
+}
+
+.intro-chunk strong {
+  color: hsl(160deg, 100%, 30%);
+}
+
+section {
+  background: hsl(0deg, 0%, 40%);
+  width: 100%;
+  border-top: 8px solid hsl(0deg, 0%, 60%);
+}
+
+.card {
+  max-width: 630px;
+  background: hsl(0deg, 0%, 100%);
+  padding: 10px 0px 10px 20px;
+  margin-left: -20px;
+  border-bottom: 8px solid hsl(0deg, 0%, 60%);
+}
+
+.indented-heading {
+  background: hsl(45deg, 100%, 50%);
+  width: fit-content;
+  padding: 10px 25px;
+  margin-left: -25px;
+  margin-top: -5px;
+  border-bottom: 4px solid hsl(45deg, 100%, 40%);
+}
